# project_repo_ASP

./: .gitignore  README.md  __init__.py  molecules.py  pyproject.toml  system.py
AutoMD/: molecules.py  system.py
AutoMD.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
AutoMD/analysis/: conductivity.py  msd.py  rdf.py
AutoMD/molecules/: bf4.json  fsi.json  pf6.json  tfa.json  tfsi.json
examples/: package_test.ipynb
molecules/: bf4.json  fsi.json  pf6.json  tfa.json  tfsi.json
